# DexPatcher

./: .gitignore  DexPatcher.sln  README.md
DexPatcher/: Build.cpp  Build.h  CMakeLists.txt  Command.cpp  Command.h  DexFile.h  DexPatcher.cpp  DexPatcher.vcxproj  DexPatcher.vcxproj.filters  ParseDex.cpp  ParseDex.h  PatchDex.cpp  PatchDex.h  Utils.h  aupk.cpp  aupk.h  cmdline.h  config.h  main.cpp  main1.cpp
